tests/errors/oob_slice.solar
fn main() {
  let a: [Int] = [10, 20, 30];
  print_int(a[1u..5u][0u]);
}
